# codegen

./: .gitignore  AGENTS.md  CLAUDE.md  DEV-GUIDE.md  INDEX.md  README.md  SESSION-LOG.md  WAIT_USER.md  WORKFLOWS.md  architecture.md  dev-guide.md  for_agent.md  index.md  intro.md  pyproject.toml  session-log.md  wait_user.md  workflows.md
cpp/: CMakeLists.txt  README.md
cpp/examples/codegen_helper/: README.md  demo.sh  run_cpp_block
cpp/include/: codegen_helper.hpp
cpp/src/: backup.cpp  backup.hpp  cli.cpp  comment_syntax.cpp  comment_syntax.hpp  config.cpp  config.hpp  env.cpp  env.hpp  errors.hpp  executor.cpp  executor.hpp  executor_posix.cpp  executor_win.cpp  expander.cpp  expander.hpp  indent.cpp  indent.hpp  parser.cpp  parser.hpp  path_mapper.cpp  path_mapper.hpp  pipeline.cpp  pipeline.hpp  progress.cpp  progress.hpp  rollback.cpp  rollback.hpp  scanner.cpp  scanner.hpp  scope.cpp  scope.hpp  utils.hpp
docs/: agent_skills.md  intro.md
docs/agent_skills/: README.md  examples-troubleshooting.md  script-rules.md  setup.md  skills.md
docs/design/: DESIGN.md  README.md  architecture.md  cli-progress.md  execution.md  markers-config.md  scan-backup-error.md
docs/for_agent/: README.md  running-and-env.md  troubleshooting-config.md  writing-blocks.md
src/: codegen_helper.py
src/codegen/: __main__.py  backup.py  cli.py  comment_syntax.py  config.py  env.py  errors.py  executor.py  expander.py  helper.py  indent.py  parser.py  pipeline.py  progress.py  rollback.py  scanner.py  scope.py
tests/integration/: test_pipeline_basic.py
tests/unit/: test_backup.py  test_cli.py  test_comment_syntax.py  test_config.py  test_executor.py  test_expander.py  test_indent.py  (+3 more)
workflows/: dev-env.md  feature-dev.md  idea.md  investigation.md  plan.md  refactor.md  roadmap.md  spec.md  testing.md  tooling.md
(+15 files in other folders)
