[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codegen"
version = "0.1.0"
description = "Cross-language in-source code generation tool"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "guanyu.lu", email = "guanyu.lu@teco.com.tw" }]
dependencies = []

[project.scripts]
codegen = "codegen.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/codegen"]

[tool.hatch.build.targets.wheel.force-include]
"src/codegen_helper.py" = "codegen_helper.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
